--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
     "name": "ng2-breadcrumb",
-    "version": "0.0.2",
+    "version": "0.1.0",
     "description": "A componenet that creates a breadcrumb trail for router paths",
     "scripts": {
-        "tslint": "tslint -c tslint.json src/**/*.ts"
     },
     "repository": {
         "type": "git",
@@ -15,25 +14,32 @@
     "main": "ng2-bootstrap.js",
     "typings": "./ng2-bootstrap.d.ts",
     "devDependencies": {
-        "angular2": "~2.0.0-beta.13",
-        "del": "^2.1.0",
-        "es6-promise": "~3.0.2",
-        "es6-shim": "~0.35.0",
+        "@angular/common": "^2.0.0-rc.1",
+        "@angular/compiler": "^2.0.0-rc.1",
+        "@angular/core": "^2.0.0-rc.1",
+        "@angular/router": "^2.0.0-rc.1",
+        "@angular/router-deprecated": "^2.0.0-rc.1",
+        "@angular/platform-browser": "^2.0.0-rc.1",
+        "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
+        "del": "^2.2.0",
+        "es6-promise": "3.2.1",
+        "es6-shim": "0.35.1",
         "gulp": "^3.9.0",
         "gulp-typescript": "^2.8.0",
         "gulp-sourcemaps ": "^1.6.0",
         "gulp-inline-ng2-template": "^1.1.2",
-        "gulp-tslint": "~4.3.4",
+        "gulp-tslint": "^5.0.0",
         "reflect-metadata": "0.1.2",
         "require-dir": "0.3.0",
-        "rxjs": "5.0.0-beta.2",
-        "semantic-release": "~4.3.5",
+        "rxjs": "5.0.0-beta.6",
+        "semantic-release": "^4.3.5",
         "systemjs": "0.19.20",
         "systemjs-builder": "^0.15.9",
-        "tsd": "^0.6.5",
-        "tsproject": "1.2.0",
+        "ts-loader": "0.8.2",
+        "tslint": "^3.8.1",
         "typescript": "^1.7.5",
-        "typings": "^0.6.8",
-        "zone.js": "0.6.6"
+        "typescript-node": "^0.1.3",
+        "typings": "0.8.1",
+        "zone.js": "0.6.12"
     }
 }
