--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-# https://git-scm.com/docs/gitignore
-# https://help.github.com/articles/ignoring-files
-# Example .gitignore files: https://github.com/github/gitignore
 /node_modules/
 /build/
 /bundles/
+/dist/
 /webserver/
 /.idea/
 /PhantomJS_1.9.8_(Windows_7_0.0.0)/
+ng2-breadcrumb.js
+ng2-breadcrumb.d.ts
+src/**/*.js
+src/**/*.d.ts
