--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-    "name": "ng2-breadcrumb",
-    "version": "0.4.0",
-    "description": "A component that creates a breadcrumb trail for router paths",
-    "scripts": {
-        "start": "tsc && concurrently \"npm run tsc\" \"npm run lite\" ",
-        "lite": "lite-server",
-        "postinstall": "typings install",
-        "tsc": "tsc -w",
-        "typings": "typings",
-        "build": "tsc",
-        "bundles": "tsc -m system --rootDir ./app --outFile ./bundles/ng2-breadcrumb.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/gmostert/ng2-breadcrumb.git"
-    },
-    "keywords": ["angular2"],
-    "author": "Gerhard Mostert",
-    "license": "MIT",
-    "main": "ng2-bootstrap.js",
-    "dependencies": {
-        "@angular/common": "2.0.0",
-        "@angular/core": "2.0.0",
-        "@angular/platform-browser": "2.0.0",
-        "@angular/platform-browser-dynamic": "2.0.0",
-        "@angular/compiler": "2.0.0",
-        "@angular/router": "3.0.0",
-        "core-js": "^2.4.1",
-        "reflect-metadata": "^0.1.3",
-        "rxjs": "5.0.0-beta.12",
-        "systemjs": "0.19.27",
-        "zone.js": "^0.6.23",
-        "angular2-in-memory-web-api": "0.0.20",
-        "bootstrap": "^3.3.6",
-        "ng2-bs3-modal": "0.9.2",
-        "ng2-file-upload": "1.1.0"
-    },
-    "devDependencies": {
-        "concurrently": "^2.2.0",
-        "lite-server": "^2.2.2",
-        "typescript": "^2.0.3",
-        "typings": "^1.3.2"
-    }
+  "name": "ng2-breadcrumb",
+  "version": "0.4.1",
+  "description": "A component that creates a breadcrumb trail for router paths",
+  "scripts": {
+    "start": "tsc && concurrently \"npm run tsc\" \"npm run lite\" ",
+    "lite": "lite-server",
+    "postinstall": "typings install",
+    "tsc": "tsc -w",
+    "typings": "typings",
+    "build": "tsc",
+    "bundles": "tsc -m system --rootDir ./app --outFile ./bundles/ng2-breadcrumb.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gmostert/ng2-breadcrumb.git"
+  },
+  "keywords": [
+    "angular2"
+  ],
+  "author": "Gerhard Mostert",
+  "license": "MIT",
+  "main": "ng2-bootstrap.js",
+  "dependencies": {
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/http": "^2.1.1",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "^3.1.1",
+    "angular2-in-memory-web-api": "0.0.20",
+    "bootstrap": "^3.3.6",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "^5.0.0-beta.12",
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.23"
+  },
+  "devDependencies": {
+    "concurrently": "^3.1.0",
+    "lite-server": "^2.2.2",
+    "typescript": "^2.0.3",
+    "typings": "^1.3.2"
+  }
 }
