--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "ng2-breadcrumb",
-  "version": "0.5.3",
+  "version": "0.5.4",
   "description": "A component that creates a breadcrumb trail for router paths",
   "scripts": {
     "start": "tsc && concurrently \"npm run tsc\" \"npm run lite\" ",
     "lite": "lite-server",
-    "postinstall": "typings install",
     "tsc": "tsc -w",
-    "typings": "typings",
     "build": "tsc",
     "bundles": "tsc -m system --rootDir ./app --outFile ./bundles/ng2-breadcrumb.js"
   },
@@ -25,10 +23,12 @@
     "@angular/common": "~2.1.0",
     "@angular/compiler": "~2.1.0",
     "@angular/core": "~2.1.0",
-    "@angular/http": "^2.1.1",
+    "@angular/http": "~2.1.1",
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
-    "@angular/router": "^3.1.1",
+    "@angular/router": "~3.1.1",
+    "@types/core-js": "^0.9.35",
+    "@types/node": "^6.0.54",
     "angular2-in-memory-web-api": "0.0.20",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
@@ -40,7 +40,6 @@
   "devDependencies": {
     "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
-    "typescript": "^2.0.3",
-    "typings": "^1.3.2"
+    "typescript": "^2.0.3"
   }
 }
