adding aot stuff

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
         "removeComments": false,
         "noImplicitAny": false
     },
+    "angularCompilerOptions": {
+        "genDir": "compiled"
+    },  
     "exclude": [
         "node_modules",
         "bundles",
