--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,10 @@
         "removeComments": false,
         "noImplicitAny": false
     },
+    "angularCompilerOptions": {
+        "genDir": "compiled"
+    },  
     "exclude": [
-        "typings/main",
-        "typings/main.d.ts",
         "node_modules",
         "bundles",
         "demo",
