--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ng2-breadcrumb",
-  "version": "0.5.4",
+  "version": "0.5.5",
   "description": "A component that creates a breadcrumb trail for router paths",
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc\" \"npm run lite\" ",
+    "start": "tsc && concurrently \"npm run ngc\" \"npm run lite\" ",
     "lite": "lite-server",
-    "tsc": "tsc -w",
-    "build": "tsc",
-    "bundles": "tsc -m system --rootDir ./app --outFile ./bundles/ng2-breadcrumb.js"
+    "tsc": "ngc -w",
+    "ngc": "ngc",
+    "build": "ngc",
+    "bundles": "ngc -m system --rootDir ./app --outFile ./bundles/ng2-breadcrumb.js"
   },
   "repository": {
     "type": "git",
@@ -20,26 +21,30 @@
   "license": "MIT",
   "main": "ng2-bootstrap.js",
   "dependencies": {
-    "@angular/common": "~2.1.0",
-    "@angular/compiler": "~2.1.0",
-    "@angular/core": "~2.1.0",
-    "@angular/http": "~2.1.1",
-    "@angular/platform-browser": "~2.1.0",
-    "@angular/platform-browser-dynamic": "~2.1.0",
-    "@angular/router": "~3.1.1",
-    "@types/core-js": "^0.9.35",
-    "@types/node": "^6.0.54",
-    "angular2-in-memory-web-api": "0.0.20",
+    "@angular/common": "~2.4.3",
+    "@angular/core": "~2.4.3",
+    "@angular/http": "^2.4.3",
+    "@angular/platform-browser": "~2.4.3",
+    "@angular/platform-browser-dynamic": "~2.4.3",
+    "@angular/router": "^3.4.3",
+    "angular2-in-memory-web-api": "0.0.21",
     "bootstrap": "^3.3.6",
-    "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.12",
+    "core-js": "2.4.1",
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "5.0.1",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
+    "@angular/compiler": "~2.4.3",
+    "@angular/compiler-cli": "~2.4.3",
+    "@angular/platform-server": "~2.4.3",
+    "@types/core-js": "^0.9.35",
+    "@types/jasmine": "^2.5.40",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^6.0.54",
     "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
-    "typescript": "^2.0.3"
+    "typescript": "^2.1.5"
   }
 }
