--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "tsc": "ngc -w",
     "ngc": "ngc",
     "build": "ngc",
-    "bundles": "ngc -m system --rootDir ./app --outFile ./bundles/ng2-breadcrumb.js"
+    "bundles": "ngc -m system --rootDir ./app --outFile ./bundles/ng2-breadcrumb.js",
+    "build:aot": "rimraf bundles && ngc -p tsconfig-aot.json"
   },
   "repository": {
     "type": "git",
@@ -19,32 +20,32 @@
   ],
   "author": "Gerhard Mostert",
   "license": "MIT",
-  "main": "ng2-bootstrap.js",
+  "main": "bundles/app.module.js",
   "dependencies": {
-    "@angular/common": "~2.4.3",
-    "@angular/core": "~2.4.3",
-    "@angular/http": "^2.4.3",
-    "@angular/platform-browser": "~2.4.3",
-    "@angular/platform-browser-dynamic": "~2.4.3",
-    "@angular/router": "^3.4.3",
+    "@angular/common": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "angular2-in-memory-web-api": "0.0.21",
-    "bootstrap": "^3.3.6",
+    "bootstrap": "4.0.0-alpha.6",
     "core-js": "2.4.1",
     "reflect-metadata": "^0.1.9",
-    "rxjs": "5.0.1",
+    "rxjs": "^5.1.1",
     "systemjs": "0.19.27",
-    "zone.js": "^0.7.4"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/compiler": "~2.4.3",
-    "@angular/compiler-cli": "~2.4.3",
-    "@angular/platform-server": "~2.4.3",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
     "@types/core-js": "^0.9.35",
     "@types/jasmine": "^2.5.40",
     "@types/moment": "^2.13.0",
     "@types/node": "^6.0.54",
     "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
-    "typescript": "^2.1.5"
+    "typescript": "^2.2.2"
   }
 }
