--- a/tsconfig-aot.json
+++ b/tsconfig-aot.json
@@ -10,7 +10,8 @@
         "noImplicitAny": false,
         "declaration": true,
         "rootDir": "./app",
-        "outDir": "./bundles"
+        "outDir": "./bundles",
+        "lib": ["dom", "es2016"]
     },
     "angularCompilerOptions": {
         "genDir": "aot",
