--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "ng5-breadcrumb",
-  "version": "0.0.0",
+  "name": "@akiocloud/ng5-breadcrumb",
+  "version": "0.0.7",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "transpile": "ngc",
+    "package": "rollup -c",
+    "minify": "uglifyjs dist/bundles/breadcrumb.umd.js --screw-ie8 --compress --mangle --comments --output dist/bundles/breadcrumb.umd.min.js",
+    "build": "npm run transpile && npm run package && npm run minify"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
@@ -27,7 +24,8 @@
   },
   "devDependencies": {
     "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "^5.0.0",
+    "@angular/compiler": "^5.2.4",
+    "@angular/compiler-cli": "^5.2.4",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -42,8 +40,10 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "rollup": "^0.55.3",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "^2.4.2",
+    "uglify-js": "^3.3.10"
   }
 }
