change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@akiocloud/ng5-breadcrumb",
+  "name": "@yasasn86/ng5-breadcrumb",
   "version": "0.0.7",
   "license": "MIT",
   "scripts": {
